# goverlay

./: .gitignore
electron-overlay/: .gitignore  CMakeLists.txt  electron_overlay.node  index.d.ts  index.js  package-lock.json  package.json
electron-overlay/src/: main.cc  overlay.h
electron-overlay/src/utils/: win-utils.h
game-overlay/: build_debug.bat  build_release.bat  gameoverlay.sln
game-overlay/n_overlay/: main.cpp  n_overlay.vcxproj  stable.h
game-overlay/n_overlay/graphics/: dxgigraphics.cc
game-overlay/n_overlay/hook/: apihook.hpp
game-overlay/n_overlay/overlay/: hookapp.cc  overlay.cc  overlay.h  uiapp.cc
game-overlay/n_ovhelper/: main.cpp  n_ovhelper.vcxproj
